# llmarmor

./: CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/llmarmor/: __init__.py  ast_analysis.py  cli.py  config.py  formatters.py  messages.py  registry.py  scanner.py  secret_patterns.py
src/llmarmor/handlers/: __init__.py  env.py  js_handler.py  json_handler.py  notebook.py  text_handler.py  toml_handler.py  yaml_handler.py
src/llmarmor/rules/: __init__.py  llm01_prompt_injection.py  llm02_sensitive_info.py  llm05_improper_output.py  llm07_system_prompt_leak.py  llm08_excessive_agency.py  llm10_unbounded_consumption.py
tests/: test_llm05_improper_output.py  test_llm05_tool_decorator.py  test_llm08_ast_tool_decorators.py  test_llm08_excessive_agency.py  test_scanner.py
tests/fixtures/: safe_app.py  vulnerable_app.py
