[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmarmor"
version = "0.5.1"
description = "OWASP LLM Top 10 security scanner for AI-powered applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "LLM Armor", email = "hello@llmarmor.dev"},
]
keywords = [
    "llm", "security", "owasp", "prompt-injection",
    "ai-security", "scanner", "guardrails",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
llmarmor = "llmarmor.cli:main"

[project.urls]
Homepage = "https://llmarmor.dev"
Repository = "https://github.com/llmarmor/llmarmor"
Issues = "https://github.com/llmarmor/llmarmor/issues"
